// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render skip 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 1,
      "padding": 15,
    }
  }
  testID="skipButton"
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Bold",
          "fontSize": 14,
          "fontStyle": "normal",
          "letterSpacing": 1,
          "lineHeight": 18,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "uppercase",
        },
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          undefined,
        ],
      ]
    }
  >
    SKIP
  </Text>
</View>
`;

exports[`renders disabled 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 0.6,
      "padding": 15,
    }
  }
  testID="skipButton"
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Bold",
          "fontSize": 14,
          "fontStyle": "normal",
          "letterSpacing": 1,
          "lineHeight": 18,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "uppercase",
        },
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          undefined,
        ],
      ]
    }
  >
    SKIP
  </Text>
</View>
`;

exports[`renders skip with style 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 1,
      "padding": 5,
    }
  }
  testID="skipButton"
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Bold",
          "fontSize": 14,
          "fontStyle": "normal",
          "letterSpacing": 1,
          "lineHeight": 18,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "uppercase",
        },
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          undefined,
        ],
      ]
    }
  >
    SKIP
  </Text>
</View>
`;

exports[`renders skip with text style 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 1,
      "padding": 15,
    }
  }
  testID="skipButton"
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Bold",
          "fontSize": 14,
          "fontStyle": "normal",
          "letterSpacing": 1,
          "lineHeight": 18,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "uppercase",
        },
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Object {
            "padding": 5,
          },
        ],
      ]
    }
  >
    SKIP
  </Text>
</View>
`;
